FEAT add option to config a new bucket instead default.